  predictor controlling `presense' and another controlling 
  the Poisson parameter, given presence. 

*** 'mvn' family for multivariate normal additive models.

** AIC computation changed for bam and gam models estimated by REML/ML
   to account for smoothing parameter uncertainty in degrees of freedom
   term.

* Polish translation added thanks to Lukasz Daniel.

* interpret.gam now evaluates in namespace of mgcv with environment of
  formula as enclosing environment, to allow it to be called without 
  attaching mgcv... 

* 'plot.gam' now weights partial residuals by *normalized* square root 
  iterative weights so that the average weight is 1 and the residuals 
  should have constant variance if all is ok.

* 'pcls' now reports if the initial point is not feasible.

* 'gam.vcomp' bug fix. Computed intervals for families with fixed scale 
   parameter were too wide. 

* With REML/ML smoothness selection in gam/bam an extra covariance matrix 'Vc'
  is now computed which allows for smoothing parameter uncertainty. See
  the 'unconditional' arguments to 'predict.gam' and 'plot.gam' to use this. 

* gam now defaults to the Pearson estimator of the scale parameter to avoid
  poor scale estimates in the quasipoisson case with low counts (and possibly
  elsewhere). Gaussian, Poisson and binomial inference invariant to change. 
  Thanks to Greg Dropkin, for reporting the issue.

* 'print.gam' and 'summary.gam' now report the rank of the model if it is
   rank deficient. 'gam.check' reports the model rank whenever it is 
   available.

* fix of bug in 'k.check' called by 'gam.check' that gave an error for 
  smooths with by variables.

* predict.gam now checks that factors in newdata do not contain more
  levels than those used in fitting.

* predict.gam could fail for type "terms" with no intercept - fixed.

* 'bfgs' now uses a finite difference approximation for the initial inverse 
  Hessian. 

1.7-28
